--- a/index.html
+++ b/index.html
@@ -5,19 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1 title="Заголовок 1">Заголовок 1</h1>
-    <p>Абзац текста.</p>
-    <h2 title="Заголовок 2">Заголовок 2</h2>
-    <p>Абзац текста.</p>
-    <img src="image.jpg" alt="Изображение" width="300" height="200" />
-    <h3 title="Заголовок 3">Заголовок 3</h3>
-    <p>Абзац текста.</p>
-    <h4 title="Заголовок 4">Заголовок 4</h4>
-    <p>Абзац текста.</p>
-    <h5 title="Заголовок 5">Заголовок 5</h5>
-    <p>Абзац текста.</p>
-    <h6 title="Заголовок 6">Заголовок 6</h6>
-    <p>Абзац текста.</p>
-  </body>
+  <body></body>
 </html>
