Урок 6 без практики. Нужно добавить

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Пример Box-model</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h1>Добро пожаловать на мой сайт</h1>
+      <p>Это базовая структура веб-страницы.</p>
+    </div>
+
+    <div class="navigation">
+      <p>Навигационная панель</p>
+    </div>
+
+    <div class="content">
+      <h2>О нас</h2>
+      <p>Это секция контента, где мы рассказываем что-то важное.</p>
+      <!-- Элемент для демонстрации Box-model -->
+      <div class="content-box">
+        <p>Демонстрация модели коробки (Box-model).</p>
+      </div>
+    </div>
+
+    <div class="footer">
+      <p>Информация в подвале сайта</p>
+    </div>
+  </body>
 </html>
