--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Практическое задание - Базовая стилизация</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="header">
-      <h1>Заголовок сайта</h1>
-      <h2>Подзаголовок</h2>
-    </div>
-
-    <div class="main-content">
-      <div class="section">
-        <div class="article">
-          <p>Текст первого уровня. Здесь находится основное описание.</p>
-          <div class="sub-article">
-            <p>
-              Текст второго уровня. Вложенный блок для дополнительных пояснений.
-            </p>
-          </div>
-        </div>
-        <div class="image-block">
-          <img src="img/lesson6/img_1.jpg" alt="Описание изображения" />
-          <p>Изображение с описанием.</p>
-        </div>
-      </div>
-
-      <div class="section">
-        <div class="article">
-          <p>Ещё один текст первого уровня.</p>
-          <div class="image-block">
-            <img
-              src="img/lesson6/img_2.jpg"
-              alt="Описание второго изображения"
-            />
-            <p>Описание</p>
-          </div>
-        </div>
+      <h1>Основной заголовок</h1>
+      <div class="nav">
+        <ul>
+          <li><a href="#section1">Раздел 1</a></li>
+          <li><a href="#section2">Раздел 2</a></li>
+          <li><a href="#section3">Раздел 3</a></li>
+        </ul>
       </div>
     </div>
-
+    <div class="main">
+      <div class="section" id="section1">
+        <h2>Раздел 1</h2>
+        <p>Это первый параграф. Заполните lorem</p>
+      </div>
+      <div class="section" id="section2">
+        <h2>Раздел 2</h2>
+        <p>Это второй параграф. Заполните lorem</p>
+        <img src="img/lesson6/img_1.jpg" alt="Изображения с котом" />
+      </div>
+      <div class="section" id="section3">
+        <h2>Раздел 3</h2>
+        <p>Это третий параграф. Заполните lorem</p>
+        <img
+          src="img/lesson6/img_1.jpg"
+          alt="Изображения с котом"
+          id="first_img"
+        />
+        <img
+          src="img/lesson6/img_2.jpg"
+          alt="Изображения с котом"
+          id="second_img"
+        />
+        <img
+          src="img/lesson6/img_3.jpg"
+          alt="Изображения с котом"
+          id="third_img"
+        />
+      </div>
+    </div>
+    <div class="whatsapp">
+      <a href="https://web.whatsapp.com/"
+        ><img src="img/lesson6/whatsapp.png" alt="Позвони"
+      /></a>
+    </div>
     <div class="footer">
-      <p>Футер страницы</p>
+      <p>Футер нашего сайта</p>
     </div>
   </body>
 </html>
