--- a/index.html
+++ b/index.html
@@ -3,57 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fixed z-index Example</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="header">
-      <h1>Основной заголовок</h1>
-      <div class="nav">
-        <ul>
-          <li><a href="#section1">Раздел 1</a></li>
-          <li><a href="#section2">Раздел 2</a></li>
-          <li><a href="#section3">Раздел 3</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="main">
-      <div class="section" id="section1">
-        <h2>Раздел 1</h2>
-        <p>Это первый параграф. Заполните lorem</p>
-      </div>
-      <div class="section" id="section2">
-        <h2>Раздел 2</h2>
-        <p>Это второй параграф. Заполните lorem</p>
-        <img src="img/lesson6/img_1.jpg" alt="Изображения с котом" />
-      </div>
-      <div class="section" id="section3">
-        <h2>Раздел 3</h2>
-        <p>Это третий параграф. Заполните lorem</p>
-        <img
-          src="img/lesson6/img_1.jpg"
-          alt="Изображения с котом"
-          id="first_img"
-        />
-        <img
-          src="img/lesson6/img_2.jpg"
-          alt="Изображения с котом"
-          id="second_img"
-        />
-        <img
-          src="img/lesson6/img_3.jpg"
-          alt="Изображения с котом"
-          id="third_img"
-        />
-      </div>
-    </div>
-    <div class="whatsapp">
-      <a href="https://web.whatsapp.com/"
-        ><img src="img/lesson6/whatsapp.png" alt="Позвони"
-      /></a>
-    </div>
-    <div class="footer">
-      <p>Футер нашего сайта</p>
-    </div>
+    <div class="content">Main Content</div>
+    <div class="fixed-box">Fixed Box</div>
   </body>
 </html>
