--- a/index.html
+++ b/index.html
@@ -3,79 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Пример семантической разметки</title>
+    <title>Путеводитель по шрифтам</title>
+    <!-- Подключение шрифтов через Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Merriweather:wght@400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Header с навигацией -->
     <header>
-      <h1>Мой блог</h1>
+      <h1>Путеводитель по шрифтам</h1>
       <nav>
         <ul>
-          <li><a href="#home">Главная</a></li>
-          <li><a href="#about">О нас</a></li>
-          <li><a href="#services">Услуги</a></li>
-          <li><a href="#contact">Контакты</a></li>
+          <li><a href="#intro">Введение</a></li>
+          <li><a href="#serif">Шрифты с засечками</a></li>
+          <li><a href="#sans-serif">Шрифты без засечек</a></li>
+          <li><a href="#monospace">Монопространственные шрифты</a></li>
         </ul>
       </nav>
     </header>
 
-    <!-- Основной контент -->
     <main>
-      <!-- Разделы сайта -->
-      <section id="about">
-        <h2>О нас</h2>
+      <section id="intro">
+        <h2>Введение</h2>
         <p>
-          Мы предоставляем высококачественные услуги в области веб-разработки.
-          Наши клиенты довольны результатами нашей работы.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+          lacinia tincidunt lorem, nec lacinia sapien ullamcorper sit amet.
+        </p>
+        <p>
+          Integer non purus quam. Nullam volutpat justo sed lacus tempor, a
+          suscipit leo volutpat.
         </p>
       </section>
 
-      <section id="services">
-        <h2>Наши услуги</h2>
+      <section id="serif">
+        <h2>Шрифты с засечками</h2>
         <p>
-          Мы занимаемся разработкой сайтов, SEO-оптимизацией и технической
-          поддержкой.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+          lacinia tincidunt lorem.
+        </p>
+        <p>
+          Praesent vehicula ligula eu varius commodo. Aenean tristique nulla a
+          dolor elementum, non fermentum velit pharetra.
+        </p>
+        <p>Morbi scelerisque libero vitae orci gravida cursus.</p>
+      </section>
+
+      <section id="sans-serif">
+        <h2>Шрифты без засечек</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+          facilisi.
+        </p>
+        <img src="images/font-guide.png" alt="Пример шрифта" width="300" />
+        <p>
+          Nunc volutpat lectus in turpis consequat cursus. Nam euismod justo sed
+          orci euismod, eget scelerisque metus commodo.
         </p>
       </section>
 
-      <section id="blog">
-        <h2>Блог</h2>
-        <article>
-          <h3>Статья дня: Советы по программированию</h3>
-          <figure>
-            <img
-              src="code-tips.jpg"
-              alt="Советы по программированию"
-              class="blog-image"
-            />
-            <figcaption>Картинка для статьи о программировании</figcaption>
-          </figure>
-          <p>
-            В этой статье я расскажу о лучших советах для начинающих
-            программистов.
-          </p>
-        </article>
-      </section>
-
-      <!-- Боковая панель -->
-      <aside>
-        <h2>Полезные ссылки</h2>
+      <section id="monospace">
+        <h2>Монопространственные шрифты</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <ul>
-          <li><a href="#">Документация HTML</a></li>
-          <li><a href="#">Документация CSS</a></li>
-          <li><a href="#">Учебные курсы по веб-разработке</a></li>
+          <li>Удобство чтения</li>
+          <li>Используются в программировании</li>
+          <li>Подходят для технических текстов</li>
         </ul>
-      </aside>
+      </section>
     </main>
 
-    <!-- Footer -->
-    <footer>
-      <address>
-        Контактная информация:
-        <a href="mailto:contact@mysite.com">contact@mysite.com</a>
-      </address>
-      <p>&copy; 2024 Мой блог</p>
-    </footer>
+    <blockquote>
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+    </blockquote>
   </body>
 </html>
