--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Путеводитель по шрифтам</title>
+    <title>Advanced CSS Selectors and Positioning</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    
+    <header>
+      <h1>CSS Selectors and Positioning</h1>
+    </header>
+
+    <main id="main-container">
+      <section class="intro-section">
+        <h2>Introduction</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+          placerat ut purus sit amet dapibus.
+        </p>
+        <p>
+          Phasellus hendrerit felis non libero fringilla, vitae consectetur orci
+          scelerisque.
+        </p>
+      </section>
+
+      <section class="left-section content">
+        <h2>Left Block</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+          vitae odio nec urna fermentum consequat.
+        </p>
+        <p><span>Special note:</span> Lorem ipsum dolor sit amet.</p>
+      </section>
+
+      <aside class="sidebar">
+        <h2>Right Block</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+          lacinia odio vitae vestibulum vestibulum.
+        </p>
+        <p><span>Notice:</span> Aliquam tincidunt turpis.</p>
+      </aside>
+
+      <section class="left-section content">
+        <h2>Another Left Block</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+          consectetur erat eu leo elementum, non varius sapien convallis.
+        </p>
+        <p><span>Info:</span> Sed tincidunt orci.</p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 Web Design Tutorial</p>
+    </footer>
   </body>
 </html>
