--- a/index.html
+++ b/index.html
@@ -1,59 +1,172 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advanced CSS Selectors and Positioning</title>
+    <title>Flexbox Layout Example</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>CSS Selectors and Positioning</h1>
+    <!-- Хедер с навигацией -->
+    <header class="header">
+      <div class="header-container">
+        <div class="logo">
+          <img src="img/lesson10/logo.jpg" alt="Логотип" />
+        </div>
+        <h1 class="company-name">Название компании</h1>
+        <nav class="navigation">
+          <a href="#about">О нас</a>
+          <a href="#products">Товары</a>
+          <a href="#footer">Контакты</a>
+        </nav>
+      </div>
     </header>
 
-    <main id="main-container">
-      <section class="intro-section">
-        <h2>Introduction</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-          placerat ut purus sit amet dapibus.
-        </p>
-        <p>
-          Phasellus hendrerit felis non libero fringilla, vitae consectetur orci
-          scelerisque.
-        </p>
+    <!-- Основной контейнер для контента -->
+    <div class="container">
+      <!-- Блок "О нас" -->
+      <section id="about" class="about">
+        <img
+          src="img/lesson10/my_company.jpeg"
+          alt="Компания"
+          class="about-image"
+        />
+        <div class="about-text">
+          <h2>О нашей компании</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illo,
+            ut ad et ab corrupti dicta velit illum temporibus alias, possimus
+            perferendis voluptatem nisi quos culpa libero, laudantium maiores
+            nostrum. Commodi beatae autem obcaecati. Voluptatibus voluptates, in
+            saepe atque voluptatem odio rem at quos aliquid quae commodi et,
+            vero, illo explicabo repudiandae tempore. Minus quo voluptatibus
+            quidem expedita? Maiores, pariatur. Qui odio velit harum optio
+            quidem quasi similique hic non enim commodi id quaerat rerum
+            molestias aspernatur obcaecati soluta, quas magni inventore numquam
+            deleniti vero deserunt quis. Blanditiis, quasi suscipit?
+          </p>
+        </div>
       </section>
 
-      <section class="left-section content">
-        <h2>Left Block</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
-          vitae odio nec urna fermentum consequat.
-        </p>
-        <p><span>Special note:</span> Lorem ipsum dolor sit amet.</p>
+      <!-- Сетка товаров -->
+      <section id="products" class="products">
+        <h2>Наши товары</h2>
+        <div class="product-grid">
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Карточка товара -->
+          <div class="product-card">
+            <img src="img/lesson10/product.png" alt="Товар 1" />
+            <h3>Товар 1</h3>
+            <p>Описание товара</p>
+            <div class="price">1000 ₽</div>
+            <button class="add-to-cart">🛒 В корзину</button>
+          </div>
+          <!-- Повторите карточки товара для полной сетки -->
+        </div>
       </section>
+    </div>
 
-      <aside class="sidebar">
-        <h2>Right Block</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-          lacinia odio vitae vestibulum vestibulum.
-        </p>
-        <p><span>Notice:</span> Aliquam tincidunt turpis.</p>
-      </aside>
-
-      <section class="left-section content">
-        <h2>Another Left Block</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-          consectetur erat eu leo elementum, non varius sapien convallis.
-        </p>
-        <p><span>Info:</span> Sed tincidunt orci.</p>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2024 Web Design Tutorial</p>
+    <!-- Футер -->
+    <footer id="footer" class="footer">
+      <div class="footer-container">
+        <div class="footer-left">
+          <div class="logo">
+            <img src="img/lesson10/logo.jpg" alt="Логотип" />
+          </div>
+          <h1 class="company-name">Название компании</h1>
+        </div>
+        <div class="footer-right">
+          <p>Телефон: +7 123 456 78 90</p>
+          <p>Email: info@example.com</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
